<resources>
    <string name="app_name">Virtual Camera Manager</string>
    <string name="start_camera">Start Virtual Camera</string>
    <string name="stop_camera">Stop Virtual Camera</string>
    <string name="start_rtmp_stream">Start RTMP Stream</string>
    <string name="stop_rtmp_stream">Stop RTMP Stream</string>
    <string name="camera_status">Camera Status</string>
    <string name="root_required">Root Access Required</string>
    <string name="root_granted">Root Access Granted</string>
    <string name="root_denied">Root Access Denied</string>
    <string name="v4l2_device_status">V4L2 Device Status</string>
    <string name="hal_status">Camera HAL Status</string>
    <string name="service_running">Service Running</string>
    <string name="service_stopped">Service Stopped</string>
    <string name="logs">View Logs</string>
    <string name="settings">Settings</string>
    <string name="video_source">Video Source</string>
    <string name="test_pattern">Test Pattern</string>
    <string name="image_file">Image File</string>
    <string name="video_file">Video File</string>
    <string name="rtmp_stream">RTMP Stream</string>
    <string name="rtmp_url_hint">Enter RTMP stream URL</string>
</resources>